=======
HISTORY
=======

1.1rc6 (unreleased)
-------------------

- Fixed translations for insert image/link button tooltips.
  [robgietema]

- Use a span instead of p tag for the discreet style to allow the remove 
  styles command/button to work properly. 
  [esteele]

- Corrected spelling of 'contributors' and renamed doc accordingly.
  [rockdj]

- Fixed inserting images and links.
  [optilude]

1.1rc5 (2009-09-30)
-------------------

- Improved test coverage.
  [robgietema]

- Moved inline style from templates to css files.
  [maartenkling]

- Removed inline style  style="display:none;" from body tag from templates.
  [maartenkling]

- Fixed bug where custom image classes wouldn't stick after editing an image.
  [robgietema]

- Removed z3c.json dependancy, changed to simplejson or built-in json.
  [kingel]

- Register import/export handlers as zcml statements.
  [kingel]

- Set javascript files as cachable and mergable.
  [robgietema]

- Removed getInfoFromBrain method in JSONFolderListing and JSONSearch.
  [robgietema]

- Added support for comment nodes in Generic Setup.
  [robgietema]

- Changed hard coded css imports in dialogs to the generated plone.css.
  [robgietema]

- Changed condition for Javascript includes.
  [robgietema]

- Fix for static image sizes.
  [robgietema]

- Added richTextWidget to list of valid classes for a rich text widget to
  support non-AT widgets.
  [robgietema]

- Renamed configlet and moved to Plone section.
  [robgietema]

- Removed browsercheck from isTinyMCEEnabled method.
  [robgietema]

- Removed default values from interfaces/utility.py since they are already set
  by the Generic Setup profile.
  [robgietema]

- Removed .mo files from version control.
  [robgietema]

- Added translations for simpleterms in controlpanel.
  [robgietema]

- Get anchors from primary field and not from the 'text' field.
  [robgietema]

- Fixed misspelled breadcrumbs.
  [robgietema]
