@@ -120,7 +120,15 @@
                             e = ReplaceTag(e, tag);
                         } else {
                             var n = this._getParentNode(e,["ol","ul"]);
-                            ed.dom.setAttrib(n,"type",styles[parseInt(v)].listType);
+                            var listType = styles[parseInt(v)].listType;
+
+                            if (className != "") {
+                                ed.dom.setAttrib(n,"type","");
+                                n.className = className;
+                            } else {
+                                ed.dom.setAttrib(n,"type",styles[parseInt(v)].listType);
+                                n.className = "";
+                            }
                         }
                         break;
                     case "Selection":
@@ -210,14 +218,16 @@
                     var il = false;
                     if (p && (p.nodeName.toLowerCase() == "ul" || p.nodeName.toLowerCase() == "ol")) {
                         var lt = ed.dom.getAttrib(p, "type");
-                        if (lt == "") {
+                        var lc = ed.dom.getAttrib(p, "class");
+
+                        if (lt == "" && lc == "") {
                             if (p.nodeName.toLowerCase() == "ul") {
                                 lt = "disc";
                             } else {
                                 lt = "1";
                             }
                         }
-                        if (lt == this._styles[i].listType) {
+                        if (lt == this._styles[i].listType || lc != "") {
                             il = true;
                         }
                     } else if (p && p.nodeName.toLowerCase() == "dl") {
