@@ -5,6 +5,9 @@ HISTORY
 1.1rc6 (unreleased)
 -------------------
 
+- Fixed bug where lists couldn't get custom classes (thanks Artur Konstanczak).
+  [robgietema]
+
 - Fixed translations for insert image/link button tooltips.
   [robgietema]
 
